2005-08-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.11 released.

        * Added new feature - "View Sorted Items with
          Percent '%' Key" functionality

2005-07-08  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.1 released.

        * Added new feature - "View Selections Summary with
          Star '*' Key" functionality

2005-06-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.09 released.

        * The package name was incorrect - needs to be Term::Menus
          - 'not' Menus (my bad)

2005-05-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.08 released.

        * Repaired code related to dynamic menu building.
          The construct ]Previous[{Menu_1} now works properly.

2005-05-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.06 released.

	* Added three new Item Configuration Hash elements:

            Default => qr/ /,
            Exclude => qr/ /,
            Include => qr/ /,

          How to use these is explained in detail in the
          updated pod documentation inside the module.

        * Fixed Navigation issues.

2005-05-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.05 released.

        * Fixed bug where when the Display => element is not
          specified in a Menu Item Hash, the default number of
          10 was not being referenced, and no items would display.


2005-05-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

	* Version 1.04 released.

	* Modified module layout to work and build in the Term::
	  root directory on CPAN. Menus.pm is now officially
	  Term::Menus (Term/Menus.pm).

	* Abstract updated to inform prospective users that Term::Menus
	  works in Terminals, Consoles and CMD environments.


2005-05-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.03 released.
