@@ -15,18 +15,18 @@ not run its Makefile.PL or Build.PL.
 Hash: SHA1
 
 SHA1 eddb7047c79938e9a1ff11cd6df7e4c52a680661 Build.PL
-SHA1 3e194e35dcc99c3542e6aa04d9cb96a5c628512d ChangeLog
+SHA1 df0abe1b36a5b944725b0a451cc02877c33c6bc3 ChangeLog
 SHA1 a74125560a260a18a646ef0b3702e1b77a45b931 LICENSE
 SHA1 b60e58dabe06df867326f357a6d73f197d15daab MANIFEST
-SHA1 4f0603403e85e4e551ee510e054f50eadb8844ed META.yml
+SHA1 63d6dfe6d6ee2667560ca37967b3e55bf2b355ec META.yml
 SHA1 f66acde86158aa6f0acaea3454b97faeedd21d74 Makefile.PL
-SHA1 46b0a200babcf01cc6d2138fb294e020238c8430 README
-SHA1 ed4b84851ee9864e2d88b82bcfd660a393b927ea lib/Term/Menus.pm
+SHA1 0d06da1824873021d8475cafb4faaf4f8858b5fb README
+SHA1 c0caee6f81a53838b4fcfb8616ea32525277fd61 lib/Term/Menus.pm
 SHA1 ded9def7d10cf71606da96112acc159e0aa9a582 t/test.t
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.0 (Cygwin)
+Version: GnuPG v1.4.1 (Cygwin)
 
-iD8DBQFC/JY5m9P/2BC89ZsRApXKAJoDup5VmVPkxCXiH07bQTA4k3ev1gCeJddt
-zT8gXyasZUGc5imMiTLeY9A=
-=Cli5
+iD8DBQFEmc38m9P/2BC89ZsRAtkxAJ902IRQ4hEVIkppvrPloKel9b1aDgCePxo6
+llISXD6vQ2TS8/9z7BVz26U=
+=ICot
 -----END PGP SIGNATURE-----
